# photos

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: db.py  main.py
api/app/models/: orm.py  schemas.py
app/: Dockerfile  package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.tsx  PhotoComponent.tsx  UploadButton.tsx  api.tsx
